frontend/src/components/ItemReviews/ItemReviews.css
#review-page-container {
    margin-left: 20px;

}

#all-reviews-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 20px;
}

#add-review-button-container button {
    border-radius: 8px;
    cursor: pointer;
    width: 100px;
    padding: 3px 8px;
    border-radius: 8px;
    font-weight: bold;
    background-color: rgb(20, 108, 148);
    color: rgb(246, 241, 241);
}

.review-container {
    border: 1px rgb(116, 116, 116, 0.5) solid;
    border-radius: 10px;
    padding-left: 15px;
    max-width: 800px;
}

#review-update-delete-buttons {
    display: flex;
    gap: 5px;
}

#review-update-delete-buttons button {
    border-radius: 8px;
    cursor: pointer;
    width: 100px;
    padding: 3px 8px;
    border-radius: 8px;
    font-weight: bold;
    background-color: rgb(20, 108, 148);
    color: rgb(246, 241, 241);
}

/* CREATE REVIEW MODAL */
.create-review-label {
    color: rgb(20, 108, 148);
    align-self: center;
    font-weight: bold;
    margin: 5px 0;
}

#create-review-form {
    /* width: 500px;
    height: 300px; */
    display: flex;
    flex-direction: column;
    align-items: center;
}

#star-input-container {
    font-size: x-large;
    display: flex;
    color: rgb(20, 108, 148);
}

#review-field-review {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#review-field-review textarea {
    height: 200px;
    width: 400px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

#create-review-form button {
    margin-top: 15px;
    border-radius: 8px;
    cursor: pointer;
    width: 100%;
    padding: 5px 8px;
    border-radius: 8px;
    font-weight: bold;
    background-color: rgb(20, 108, 148);
    color: rgb(246, 241, 241);
}

